# libpisp

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  meson.build  meson_options.txt
.github/workflows/: camera-test-libpisp.yml  gen_orig.yml  libpisp-build-test.yaml  libpisp-style-checker.yml  pisp-verification.test.yaml
debian/: changelog  control  copyright  gbp.conf  gstreamer1.0-pispconvert.install  libpisp-common.install  libpisp-dev.install  libpisp1.install  rules  salsa-ci.yml  watch
debian/patches/: helpers-media_device-ignore-lockf-return-value.patch  reproducible_build.patch  series
debian/upstream/: metadata
src/: CMakeLists.txt  meson.build
src/backend/: backend.cpp  backend.h  backend_default_config.cpp  backend_default_config.json  backend_prepare.cpp  colourspace_calcs.py  meson.build  pisp_be_config.h
src/backend/tiling/: context_stage.cpp  crop_stage.cpp  meson.build  output_stage.cpp  pipeline.cpp  stages.h
src/common/: meson.build  pisp_common.h  pisp_logging.cpp  pisp_types.h
src/examples/: convert.cpp
src/frontend/: frontend.cpp  frontend.h  meson.build  pisp_fe_config.h  pisp_statistics.h
src/gst/: gstpispconvert.cpp  gstpispconvert.h  gstpispconvert_BACKUP_1387529.cpp  gstpispconvert_LOCAL_1387529.cpp  meson.build  usage.md
src/helpers/: backend_device.cpp  backend_device.hpp  buffer.cpp  buffer.hpp  device_fd.hpp  dma_heap.hpp  media_device.cpp  media_device.hpp  meson.build  v4l2_device.cpp  v4l2_device.hpp
src/libpisp/: meson.build
src/libpisp/backend/: backend.cpp  backend.h  backend.hpp  backend_debug.cpp  backend_default_config.cpp  backend_default_config.json  backend_prepare.cpp  colourspace_calcs.py  generate_filter.py  meson.build  pisp_be_config.h
src/libpisp/backend/tiling/: README.txt  context_stage.cpp  context_stage.h  context_stage.hpp  crop_stage.cpp  crop_stage.h  crop_stage.hpp  input_stage.cpp  input_stage.h  input_stage.hpp  meson.build  output_stage.cpp  output_stage.h  output_stage.hpp  pipeline.cpp  pipeline.h  pipeline.hpp  pisp_tiling.cpp  pisp_tiling.h  pisp_tiling.hpp  rescale_stage.cpp  rescale_stage.h  rescale_stage.hpp  split_stage.cpp  split_stage.h  split_stage.hpp  stages.cpp  stages.h  stages.hpp  tiling.h  types.hpp
src/libpisp/common/: logging.hpp  meson.build  pisp_common.h  pisp_logging.cpp  pisp_logging.h  pisp_logging.hpp  pisp_pwl.cpp  pisp_pwl.hpp  pisp_types.h  pisp_utils.cpp  pisp_utils.h  pisp_utils.hpp  utils.hpp  version.hpp
src/libpisp/frontend/: frontend.cpp  frontend.h  frontend.hpp  meson.build  pisp_fe_config.h  pisp_statistics.h
src/libpisp/variants/: bcm2712.cpp  meson.build  pisp_variant.h  pisp_variant.hpp  variant.cpp  variant.hpp
src/variants/: meson.build
utils/: checkstyle.py  colourspace_calcs.py  gen-dist.sh  generate_filter.py  libpisp.wrap  test_convert.py  version.cpp.in  version.py
