project('libpisp', 'c', 'cpp',
        meson_version : '>= 0.64.0',
        version : '0.0.1',
        default_options : [
            'werror=true',
            'warning_level=2',
            'cpp_std=c++17',
            'buildtype=release',
        ],
        license : 'BSD-2-Clause')

subdir('src')
